# tofu

./: .env.example  .gitignore  CURRENT.md  Cargo.toml  IMPLEMENTATION.md  NEW_VISION.md  README.md  VISION.md  build.sh  index.html  main.js  ot_assignment.py  package-lock.json  package.json
backend/: __init__.py  config.py  nca.py  ot_solver.py  requirements.txt  server.py  shapes.py  train.py
docs/: AI_PROMPT_IMPROVEMENTS.md  AI_USAGE.md  COMPLETE.md  DOCS_ORGANIZED.md  GEMINI_3_UPDATE.md  GEMINI_SETUP.md  IMPLEMENTATION.md  MODEL_UPGRADE.md  PURE_AI_MODE.md  README.md  SCHEMA.md  TRUE_GENERATIVE_AI.md  VOICE_MODE.md
public/: nca_weights.json  shapes.json
shaders/: particle.wgsl  ui_overlay.wgsl
src/: ai_brain.rs  constants.js  layout_engine.rs  lib.rs  main.js  main.rs  particle_system.rs  renderer.rs  ui_overlay.rs  voice_input.rs
src/gpu/: buffers.js  device.js  nca.js  ot.js  ot_gpu.js  pipelines.js  shader-utils.js
src/shapes/: mathematical.js  molecular.js  primitives.js  registry.js
src/ui/: panel.js
training/: train_nca.py
wgsl/: bloom.wgsl  decay.wgsl  freeze_filter.wgsl  kmeans_assign.wgsl  kmeans_divide.wgsl  kmeans_update.wgsl  nca_extract.wgsl  nca_step.wgsl  nca_step_mlp.wgsl  physics.wgsl  render.wgsl  splat.wgsl
